add react schedule and xcheck tasks

--- a/tasks-to-render.json
+++ b/tasks-to-render.json
@@ -6,5 +6,7 @@
   "4": "active-tasks/rss-singolo-dom-and-responsive.json",
   "5": "active-tasks/rss-singolo.json",
   "6": "active-tasks/rss-virtual-keyboard.json",
-  "7": "active-tasks/Angular-YouTube-client.json"
+  "7": "active-tasks/Angular-YouTube-client.json",
+  "8": "active-tasks/react-schedule.json",
+  "9": "active-tasks/react-xcheck.json"
 }
